--- a/TFG_Projects_APP_Frontend/Pages/ProjectManagementPage.xaml
+++ b/TFG_Projects_APP_Frontend/Pages/ProjectManagementPage.xaml
@@ -146,19 +146,32 @@
                     SelectionMode="Single">
                     <CollectionView.ItemTemplate>
                         <DataTemplate x:DataType="models:AppUser">
-                            <Border Padding="10">
-                                <StackLayout Orientation="Horizontal">
-                                    <StackLayout Padding="10" Orientation="Vertical">
-                                        <Label FontSize="16" Text="{Binding Username}" />
-                                        <Label FontSize="12" Text="{Binding Email}" />
-                                        <Label FontSize="12" Text="{Binding Role.Name}" />
-                                    </StackLayout>
+                            <Border
+                                Margin="2"
+                                Padding="5"
+                                Stroke="{StaticResource Gray300}"
+                                StrokeThickness="1">
+                                <Grid Padding="5" ColumnDefinitions="*,Auto">
+                                    <VerticalStackLayout Spacing="2">
+                                        <Label FontSize="14" Text="{Binding Username}" />
+                                        <Label
+                                            FontSize="12"
+                                            Text="{Binding Email}"
+                                            TextColor="Gray" />
+                                        <Label
+                                            FontSize="12"
+                                            Text="{Binding Role.Name}"
+                                            TextColor="Gray" />
+                                    </VerticalStackLayout>
                                     <Button
+                                        Grid.Column="1"
+                                        Padding="8,2"
                                         BackgroundColor="{DynamicResource Delete}"
                                         Command="{Binding UserRemoveCommand, Source={RelativeSource AncestorType={x:Type pageModels:ProjectManagementPageModel}}}"
                                         CommandParameter="{Binding .}"
-                                        Text="{x:Static properties:Resources.RemoveButton}" />
-                                </StackLayout>
+                                        Text="{x:Static properties:Resources.RemoveButton}"
+                                        VerticalOptions="Center" />
+                                </Grid>
                             </Border>
                         </DataTemplate>
                     </CollectionView.ItemTemplate>
