--- a/TFG_Projects_APP_Frontend/Pages/Tasks/TaskBoardPage.xaml
+++ b/TFG_Projects_APP_Frontend/Pages/Tasks/TaskBoardPage.xaml
@@ -30,7 +30,13 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
-            <StackLayout Grid.Row="0" Orientation="Horizontal">
+
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+
+
+            <StackLayout Orientation="Horizontal">
                 <Button
                     BackgroundColor="{DynamicResource Create}"
                     Command="{Binding CreateTaskSectionCommand}"
@@ -48,12 +54,17 @@
                     WidthRequest="50"
                     Color="{DynamicResource ActivityIndicator}" />
             </StackLayout>
-            <StackLayout
+
+            <ScrollView
                 Grid.Row="1"
-                Padding="5"
-                Orientation="Horizontal"
-                Spacing="20">
-                <ScrollView Orientation="Horizontal">
+                Grid.Column="0"
+                Padding="2"
+                Orientation="Horizontal">
+                <StackLayout
+                    Grid.Row="1"
+                    Padding="5"
+                    Orientation="Horizontal"
+                    Spacing="20">
                     <CollectionView
                         HorizontalOptions="StartAndExpand"
                         ItemsSource="{Binding TaskSections}"
@@ -80,9 +91,10 @@
                             </DataTemplate>
                         </CollectionView.ItemTemplate>
                     </CollectionView>
-                </ScrollView>
-            </StackLayout>
+                </StackLayout>
+            </ScrollView>
         </Grid>
+
         <VerticalStackLayout
             Grid.Column="1"
             HorizontalOptions="End"
